# email_agent

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
email_triage_env/: README.md  models.py  pyproject.toml
email_triage_env/server/: app.py  email_triage_env_environment.py
email_triage_env/tasks/: easy.py  hard.py  medium.py
server/: app.py
