[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email_triage_env"
version = "0.1.0"
description = "AI Email Management Agent for Meta PyTorch Hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "openai",
    "python-dotenv",
    "pydantic>=2.0.0",
    "fastapi",
    "uvicorn"
]

[tool.hatch.build.targets.wheel]
packages = ["email_triage_env"]
