[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email_triage_env"
version = "0.1.0"
description = "AI Email Management Agent for Meta PyTorch Hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "openai",
    "python-dotenv",
    "pydantic>=2.0.0",
    "uvicorn",
    "fastapi"
]

# This is the part that was missing and causing the error
[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server", "models"]
