[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email_triage_env"
version = "0.1.0"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai",
    "python-dotenv",
    "pydantic>=2.0.0",
    "uvicorn",
    "fastapi"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
