[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email_triage_env"
version = "0.1.0"
description = "Email Triage Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "openai",
    "python-dotenv",
    "pydantic>=2.0.0",
    "uvicorn",
    "fastapi"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# This line fixes the "Missing [project.scripts] server entry point" error
server = "server.app:main"

[tool.setuptools]
include-package-data = true
# This tells the build system to look for the code in your root and server folders
packages = ["server", "models"]
package-dir = {"" = "."}
